:sparkles: (feat): add the text for metric choice

--- a/HumanForYou/HumanForYouProject.ipynb
+++ b/HumanForYou/HumanForYouProject.ipynb
@@ -339,27 +339,152 @@
    "execution_count": 154
   },
   {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['Age',\n 'Attrition',\n 'BusinessTravel',\n 'TotalWorkingYears',\n 'YearsAtCompany',\n 'YearsWithCurrManager',\n 'EnvironmentSatisfaction',\n 'JobSatisfaction',\n 'PresenceIndicator']"
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "cell_type": "markdown",
+   "source": [
+    "# Choix des métriques de performance "
    ],
-   "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-07T12:37:21.052154400Z",
-     "start_time": "2024-02-07T12:37:21.029261500Z"
-    }
+    "collapsed": false
    },
-   "id": "14838e6959ca1a6b",
-   "execution_count": 153
+   "id": "cdf7eb2d87e66ee0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Afin de mesurer la performance de nos modèles pour savoir quels seront les meilleurs modèles, il est important de définir en amont des métriques de performance pour effectuer ce choix. Pour ce faire il existe plusieurs métriques de performance pour les problèmes de classification binaire."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6256a72631cd5a07"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Accuracy\n",
+    "\n",
+    "L'accuracy est la métrique la plus simple et la plus utilisée pour mesurer la performance d'un modèle. Elle représente le nombre de prédictions correctes (à la fois positives et négatives) par rapport au nombre total de prédictions. Cependant, cette métrique n'est pas toujours la meilleure pour mesurer la performance d'un modèle. En effet, dans le cas où les classes ne sont pas équilibrées, l'accuracy peut être trompeuse. Par exemple, si 90% des données appartiennent à la classe 1 et 10% à la classe 0, un modèle qui prédit toujours la classe 1 aura une accuracy de 90%.\n",
+    "\n",
+    "$$\n",
+    "\\text{Accuracy} = \\frac{TP + TN}{TP + TN + FP + FN}\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f113f2694cbf70b0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Precision\n",
+    "\n",
+    "La precision est une métrique qui mesure la proportion de vrais positifs parmi les prédictions positives. Elle est utile lorsque le coût des faux positifs est élevé. Par exemple, dans le cas d'un modèle qui prédit si un email est un spam ou non, il est préférable d'avoir un faible taux de faux positifs (emails légitimes classés comme spam) même si cela signifie que certains spams seront classés comme légitimes.\n",
+    "\n",
+    "$$\n",
+    "\\text{Précision} = \\frac{TP}{TP + FP}\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e7c69be06dcbb93e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Recall \n",
+    "\n",
+    "Le recall (ou rappel) est une métrique qui mesure la proportion de vrais positifs parmi les vrais positifs et les faux négatifs. Elle est utile lorsque le coût des faux négatifs est élevé. Par exemple, dans le cas d'un modèle qui prédit si un patient a une maladie ou non, il est préférable d'avoir un faible taux de faux négatifs (patients malades classés comme sains) même si cela signifie que certains patients sains seront classés comme malades.\n",
+    "\n",
+    "$$\n",
+    "\\text{Recall} = \\frac{TP}{TP + FN}\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "528cde6748234085"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## F1 Score\n",
+    "\n",
+    "Le F1 score est la moyenne harmonique de la precision et du recall. Il est utile lorsque les classes sont déséquilibrées. En effet, dans ce cas, l'accuracy n'est pas une bonne métrique de performance. Par exemple, si 90% des données appartiennent à la classe 1 et 10% à la classe 0, un modèle qui prédit toujours la classe 1 aura une accuracy de 90%. Cependant, le F1 score de ce modèle sera de 0. \n",
+    "\n",
+    "$$\n",
+    "F1 = 2 \\times \\frac{Precision \\times Recall}{Precision + Recall}\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9d93db0a4fa67b1f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## AUC-ROC \n",
+    "\n",
+    "L'AUC-ROC (Area Under the Receiver Operating Characteristic Curve) est la mesure de la capacité d'un modèle à distinguer entre les classes. ROC est une courbe de probabilité qui trace le taux de vrais positifs contre le taux de faux positifs à différents seuils de classification. \n",
+    "\n",
+    "Un modèle qui fait des prédictions parfaites aurait une AUC de 1, tandis qu'un modèle qui fait des prédictions aléatoires aurait une AUC de 0.5.\n",
+    "\n",
+    "L'AUC-ROC est particulièrement utile lorsque les classes sont déséquilibrées. Elle est insensible au déséquilibre des classes et se concentre sur la capacité du modèle à distinguer entre les classes. Cependant, si le coût des faux positifs est très élevé, il peut être trompeur."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fdd2e0fb997ffc2c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## AUC PR\n",
+    "\n",
+    "L'AUC-PR est similaire à l'AUC-ROC mais se concentre sur la relation entre la précision (proportion de vrai positifs parmis les prédiction positives) et le recall (proportion de vrais positifs parmis les vrais cas positifs). \n",
+    "\n",
+    "Dans un contexte où les positifs (comme les spams dans un exemple de filtrage) sont rares, l'AUC-PR donne une meilleure indication de la performance du modèle. \n",
+    "\n",
+    "L'AUC-PR est préférable lorsque le déséquilibre des classe est un problème et que l'on s'intéresse davantage à la performance du modèle sur la classe minoritaire. Il est plus informatif que l'AUC-ROC dans les cas où les positifs sont beaucoup moins fréquents que les négatifs."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a5f68b174414e205"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Choix appliqué au contexte "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e7982437808d226a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Pour le problème de l'attrition des employés, qui est un problème de classification binaire (les employés quittent ou ne quittent pas l'entreprise) \n",
+    "\n",
+    "Il est important de prendre en compte le coût relatif des erreurs (faux positifs vs faux négatifs) et la distribution de la classe (équilibrée ou déséquilibrée).\n",
+    "\n",
+    "* Si le *coût d'un faux négatif* (ne pas identifier un employé qui est susceptible de quitter) est élevée car cela pourrait perturber les opérations de l'entreprise, entaîner la perte de talent clés ou nuire à la plannification des ressources, alors il est préférable de privilégier *le recall*.\n",
+    "\n",
+    "* Si le coût d'un faux positif (croire à tort qu'un employé va partir) est élevée, ce qui conduit à un problème éthique et conduire à des dépenses inutiles en interventions de rétention ou à une ambiance de méfiance, alors il est préférable de privilégier la précision. \n",
+    "\n",
+    "Dans le contexte de notre problème, ces deux types d'erreurs sont importants, le F1-Score peut être un bon choix car il équilibre la précision et le recall. Cependant nos données étant déséquilibrées, les mesures telles que la précision, le recall et le F1-Score peuvent ne pas refléter fidèlement la performance de notre modèle.\n",
+    "\n",
+    "Dans ce cas L'AUC-ROC ou l'AUC-PR pourraient être plus appropriées. L'AUC-ROC est moins sensible aux déséquilibres de classe, mais si la classe positive (les employés qui quittent est beaucoup plus petite, l'AUC-PR peut être préférable car elle se concentre sur la classe minoritaire. \n",
+    "\n",
+    "Les autres métriques sont évidemment utiles pour évaluer la performance des modèles, mais prendrons en priorité l'AUC-PR et le F1-Score pour évaluer la performance de nos modèles."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f834eb0afb473d4e"
   },
   {
    "cell_type": "code",
@@ -368,7 +493,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "37505d6aee56a72c"
+   "id": "762b4f208a8b0b3e"
   }
  ],
  "metadata": {
